# jetson_dev

./: .gitattributes  .gitignore  .gitmodules  Readme.md  args.sh  jd.sh  jp.sh
Application/: CMakeLists.txt  conanfile.py  main.cpp
CustomLayer/Linux_for_Tegra/bootloader/t186ref/cfg/: flash_l4t_t194_spi_sd_p3668_enc_rfs.xml
Docker/: Dockerfile
Docker/files/: l4t_flash_prerequisites.sh  source.lists.18.04.arm64
Scripts/: conan_jetson  conan_x86  download_r36.4.3.sh  download_sdk.sh
application/: CMakeLists.txt
custom_layer/Linux_for_Tegra/bootloader/t186ref/cfg/: flash_l4t_t194_spi_sd_p3668.xml
custom_layer/Linux_for_Tegra/rootfs/etc/apt/sources.list.d/: nvidia-l4t-apt-source.list
custom_layer/Linux_for_Tegra/tools/kernel_flash/: flash_l4t_external.xml
customer_layer/Linux_for_Tegra/bootloader/t186ref/cfg/: flash_l4t_t194_spi_sd_p3668.xml
customer_layer/Linux_for_Tegra/rootfs/etc/: nvpmodel.conf
customer_layer/Linux_for_Tegra/rootfs/home/lw/: wifi.sh  xavier_rt.sh
customer_layer/Linux_for_Tegra/tools/: l4t_create_default_user.sh
customer_layer/Linux_for_Tegra/tools/kernel_flash/: flash_l4t_external_nvme_samsung.xml
docker/: Dockerfile
docker/files/: jd.sh  l4t_flash_prerequisites.sh  sources.list.16.04  sources.list.16.04.arm64  sources.list.20.04.arm64
scripts/: bash_log.sh  toolchain_aarch64.cmake
